--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "standard": "*"
   }
 }
