Vouchers file as settings parameter

--- a/config.json.example
+++ b/config.json.example
@@ -12,5 +12,8 @@
   },
   "giphy": {
     "key": "<your-giphy-api-key-here>"
+  },
+  "vouchers": {
+    "filename": "<your-vouchers-file-name-here>"
   }
 }
