refactoring; wow much alive; (#40)
* refactoring; wow much alive;

* remove dogecoiNode reference

* Remove unused bitcoinjs-lib

* fixing stuff

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/main.js",
     "dev": "nodemon src/main.js",
     "migrate": "node migrate/index.js",
+    "lint": "standard",
     "test": "echo \"I will write some... One day...\" && exit 0"
   },
   "keywords": [
@@ -18,12 +19,10 @@
   "author": "Me",
   "license": "ISC",
   "dependencies": {
-    "bitcoinjs-lib": "2.3.0",
-    "discord.js": "^11.2.1",
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.3",
     "dotenv": "^4.0.0",
-    "jsonfile": "^4.0.0",
-    "node-dogecoin": "^0.3.9",
-    "request": "^2.81.0"
+    "jsonfile": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1",
